--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Python
 							"Пишем платформер"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -57,7 +57,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Web-разработке
 							"Создаем лоадер"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -65,7 +65,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по работе с API
 							"API"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -73,7 +73,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по чат-ботам
 							"Пишем чат-бот"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -81,14 +81,14 @@
 						<div class="description_container">
 							<p class="text">Интенсив по 3D-моделированию
 							"3D-моделирование"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div><div class="card">
 						<img src="images/test.jpg" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Arduino
 							"Arduino"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -96,7 +96,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Project/Product
 							"Project/Product"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -104,7 +104,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по MySQL + PHP
 							"MySQL + PHP"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -112,7 +112,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Firebase
 							"Firebase"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -120,7 +120,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по парсингу данных
 							"Парсинг данных"</p>
-							<a href="#" class="button">Зарегистрироваться</a>
+							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 				</div>
