--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rel="shortcut icon" href="images/logos/logo.svg" type="image/png">
 		<script type="text/javascript" src="js/scripts.js"></script>
+		<script type="text/javascript" >
+		   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+		   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		   ym(70325131, "init", {
+		        clickmap:true,
+		        trackLinks:true,
+		        accurateTrackBounce:true,
+		        webvisor:true
+		   });
+		</script>
+		<noscript><div><img src="https://mc.yandex.ru/watch/70325131" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	</head>
 	<body>
 		<section id="promo">
