--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="robots" content="index,follow" />
 		<meta name="author" content="Shine Squad">
+		<meta 
+			name="description" 
+			content="МАРАФОН by Shine Squad - это курс интенсивов, предназначенный для учащихся средних образовательных организаций и студентов вузов и колледжей, созданный при поддержке кафедры информационных технологий Нижнетагильского государственного
+			социально-педагогического института. На этом курсе команда Shine Squad научит создавать и сопровождать проекты, разрабатывать программные решения, основам дизайна, тимбилдинга а также project и product менеджмента."
+		>
+		<meta 
+			name="keywords" 
+			content="марафон, курс, образовательный курс, интенсив, информационные технологии, IT, разработка, дизайн, образование, project, product, Python, Нижний Тагил, образование в Нижнем Тагиле"
+		>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rel="shortcut icon" href="images/logos/logo.svg" type="image/png">
 		<script type="text/javascript" src="js/scripts.js"></script>
