--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<p class="title">Интенсивы</p>
 				<div class="card_container">
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/Python.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Python
 							"Пишем платформер"</p>
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/Loader.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Web-разработке
 							"Создаем лоадер"</p>
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/API.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по работе с API
 							"API"</p>
@@ -91,7 +91,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/Bot.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по чат-ботам
 							"Пишем чат-бот"</p>
@@ -99,14 +99,14 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/3D_model.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по 3D-моделированию
 							"3D-моделирование"</p>
 							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div><div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/Arduino.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Arduino
 							"Arduino"</p>
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/Project_Product.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Project/Product
 							"Project/Product"</p>
@@ -122,7 +122,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/SQL_PHP.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по MySQL + PHP
 							"MySQL + PHP"</p>
@@ -130,7 +130,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/Firebase.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Firebase
 							"Firebase"</p>
@@ -138,7 +138,7 @@
 						</div>
 					</div>
 					<div class="card">
-						<img src="images/test.jpg" class="card_image">
+						<img src="images/intense/Parsing.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по парсингу данных
 							"Парсинг данных"</p>
