--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Web-разработке
 							"Создаем лоадер"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -87,7 +87,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по работе с API
 							"API"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -95,7 +95,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по чат-ботам
 							"Пишем чат-бот"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -103,14 +103,14 @@
 						<div class="description_container">
 							<p class="text">Интенсив по 3D-моделированию
 							"3D-моделирование"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div><div class="card">
 						<img src="images/intense/Arduino.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Arduino
 							"Arduino"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -118,7 +118,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Project/Product
 							"Project/Product"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -126,7 +126,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по MySQL + PHP
 							"MySQL + PHP"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -134,7 +134,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Firebase
 							"Firebase"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -142,7 +142,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по парсингу данных
 							"Парсинг данных"</p>
-							<a href="#" class="button" target="_blank">Зарегистрироваться</a>
+							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 				</div>
