--- a/index.html
+++ b/index.html
@@ -67,19 +67,11 @@
 				<p class="title">Интенсивы</p>
 				<div class="card_container">
 					<div class="card">
-						<img src="images/intense/Python.png" class="card_image">
-						<div class="description_container">
-							<p class="text">Интенсив по Python
-							"Пишем платформер"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="button" target="_blank">Зарегистрироваться</a>
-						</div>
-					</div>
-					<div class="card">
 						<img src="images/intense/Loader.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Web-разработке
 							"Создаем лоадер"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -87,7 +79,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по работе с API
 							"API"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -95,7 +87,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по чат-ботам
 							"Пишем чат-бот"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -103,14 +95,14 @@
 						<div class="description_container">
 							<p class="text">Интенсив по 3D-моделированию
 							"3D-моделирование"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div><div class="card">
 						<img src="images/intense/Arduino.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Arduino
 							"Arduino"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -118,7 +110,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Project/Product
 							"Project/Product"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -126,7 +118,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по MySQL + PHP
 							"MySQL + PHP"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -134,7 +126,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Firebase
 							"Firebase"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
@@ -142,7 +134,15 @@
 						<div class="description_container">
 							<p class="text">Интенсив по парсингу данных
 							"Парсинг данных"</p>
-							<a href="#" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+						</div>
+					</div>
+					<div class="card">
+						<img src="images/intense/Python.png" class="card_image">
+						<div class="description_container">
+							<p class="text">Интенсив по Python
+							"Пишем платформер"</p>
+							<a href="https://www.youtube.com/watch?v=UO1OglLz5Nc" class="button" target="_blank">Подробнее</a>
 						</div>
 					</div>
 				</div>
