--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		   });
 		</script>
 		<noscript><div><img src="https://mc.yandex.ru/watch/70325131" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+		<script type="text/javascript">!function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src="https://vk.com/js/api/openapi.js?168",t.onload=function(){VK.Retargeting.Init("VK-RTRG-655700-wVBH"),VK.Retargeting.Hit()},document.head.appendChild(t)}();</script><noscript><img src="https://vk.com/rtrg?p=VK-RTRG-655700-wVBH" style="position:fixed; left:-999px;" alt=""/></noscript>
 	</head>
 	<body>
 		<section id="promo">
@@ -79,7 +80,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по работе с API
 							"API"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div>
 					<div class="card">
@@ -87,7 +88,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по чат-ботам
 							"Пишем чат-бот"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div>
 					<div class="card">
@@ -95,14 +96,14 @@
 						<div class="description_container">
 							<p class="text">Интенсив по 3D-моделированию
 							"3D-моделирование"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div><div class="card">
 						<img src="images/intense/Arduino.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по Arduino
 							"Arduino"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div>
 					<div class="card">
@@ -110,7 +111,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Project/Product
 							"Project/Product"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div>
 					<div class="card">
@@ -118,7 +119,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по MySQL + PHP
 							"MySQL + PHP"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div>
 					<div class="card">
@@ -126,7 +127,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по Firebase
 							"Firebase"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div>
 					<div class="card">
@@ -134,7 +135,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по парсингу данных
 							"Парсинг данных"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Зарегистрироваться</a>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
 						</div>
 					</div>
 					<div class="card">
