--- a/index.html
+++ b/index.html
@@ -67,14 +67,6 @@
 				<p class="title">Интенсивы</p>
 				<div class="card_container">
 					<div class="card">
-						<img src="images/intense/Beautiful_animation.png" class="card_image">
-						<div class="description_container">
-							<p class="text" style="white-space: pre-line;">Новогодний интенсив 
-							"Анимируем красиво"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="button" target="_blank">Зарегистрироваться</a>
-						</div>
-					</div>
-					<div class="card">
 						<img src="images/intense/API.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по работе с API
@@ -151,6 +143,14 @@
 							<p class="text">Интенсив по Web-разработке
 							"Создаем лоадер"</p>
 							<a href="https://www.youtube.com/watch?v=PxT9MSvSe0U" class="button" target="_blank">Подробнее</a>
+						</div>
+					</div>
+					<div class="card">
+						<img src="images/intense/Beautiful_animation.png" class="card_image">
+						<div class="description_container">
+							<p class="text" style="white-space: pre-line;">Новогодний интенсив 
+							"Анимируем красиво"</p>
+							<a href="https://www.youtube.com/watch?v=z_FcTBGfL_I" class="button" target="_blank">Подробнее</a>
 						</div>
 					</div>
 				</div>
