--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 						<img src="images/intense/API.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по работе с API
-							"API"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
+							"Устраняем рутину"</p>
+							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="button" target="_blank">Зарегистрироваться</a>
 						</div>
 					</div>
 					<div class="card">
