--- a/index.html
+++ b/index.html
@@ -68,14 +68,6 @@
 				<p class="title">Интенсивы</p>
 				<div class="card_container">
 					<div class="card">
-						<img src="images/intense/API.png" class="card_image">
-						<div class="description_container">
-							<p class="text">Интенсив по работе с API
-							"Устраняем рутину"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="button" target="_blank">Зарегистрироваться</a>
-						</div>
-					</div>
-					<div class="card">
 						<img src="images/intense/Bot.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по чат-ботам
@@ -149,9 +141,17 @@
 					<div class="card">
 						<img src="images/intense/Beautiful_animation.png" class="card_image">
 						<div class="description_container">
-							<p class="text" style="white-space: pre-line;">Новогодний интенсив 
+							<p class="text">Новогодний интенсив 
 							"Анимируем красиво"</p>
 							<a href="https://www.youtube.com/watch?v=z_FcTBGfL_I" class="button" target="_blank">Подробнее</a>
+						</div>
+					</div>
+					<div class="card">
+						<img src="images/intense/API.png" class="card_image">
+						<div class="description_container">
+							<p class="text">Интенсив по работе с API
+							"Устраняем рутину"</p>
+							<a href="https://www.youtube.com/watch?v=c9HfFw6mp0U" class="button" target="_blank">Подробнее</a>
 						</div>
 					</div>
 				</div>
