--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<div class="description_container">
 							<p class="text">Интенсив по чат-ботам
 							"Пишем чат-бот"</p>
-							<a href="https://forms.gle/qLxBhXRQcQ2KihNX7" class="disable_button" target="_blank">Скоро</a>
+							<a href="https://www.youtube.com/watch?v=NnRT2UYkRx8&feature=youtu.be" class="button" target="_blank">Ссылка на трансляцию</a>
 						</div>
 					</div>
 					<div class="card">
