--- a/index.html
+++ b/index.html
@@ -68,14 +68,6 @@
 				<p class="title">Интенсивы</p>
 				<div class="card_container">
 					<div class="card">
-						<img src="images/intense/Bot.png" class="card_image">
-						<div class="description_container">
-							<p class="text">Интенсив по чат-ботам
-							"Пишем чат-бот"</p>
-							<a href="https://www.youtube.com/watch?v=NnRT2UYkRx8&feature=youtu.be" class="button" target="_blank">Ссылка на трансляцию</a>
-						</div>
-					</div>
-					<div class="card">
 						<img src="images/intense/3D_model.png" class="card_image">
 						<div class="description_container">
 							<p class="text">Интенсив по 3D-моделированию
@@ -152,6 +144,22 @@
 							<p class="text">Интенсив по работе с API
 							"Устраняем рутину"</p>
 							<a href="https://www.youtube.com/watch?v=c9HfFw6mp0U" class="button" target="_blank">Подробнее</a>
+						</div>
+					</div>
+					<div class="card">
+						<img src="images/intense/Bot.png" class="card_image">
+						<div class="description_container">
+							<p class="text">Интенсив по чат-ботам
+							"Пишем чат-бот"</p>
+							<a href="https://www.youtube.com/watch?v=NnRT2UYkRx8&feature=youtu.be" class="button" target="_blank">Подробнее</a>
+						</div>
+					</div>
+					<div class="card">
+						<img src="images/intense/Mobile.png" class="card_image">
+						<div class="description_container">
+							<p class="text">Интенсив по мобильной разработке
+							"Пишем игру"</p>
+							<a href="https://youtu.be/jLNDrOga_SU" class="button" target="_blank">Подробнее</a>
 						</div>
 					</div>
 				</div>
